--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
         <!-- Import the JPA API, we use provided scope as the API is included in 
             JBoss WildFly -->
         <dependency>
