created managed DS

--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,14 @@
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>${version.wildfly.maven.plugin}</version>
+                <configuration>
+                    <beforeDeployment>
+                        <commands>
+                            <command>data-source add --jndi-name=java:jboss/datasources/eshopDS --name=eshopDB --connection-url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1 --driver-name=h2 --user-name=sa --password=sa</command>
+                        </commands>
+                    </beforeDeployment>
+                </configuration>
+
             </plugin>
 
             <plugin>
