--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,11 @@
             <artifactId>postgresql</artifactId>
             <version>9.0-801.jdbc4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss.ejb3</groupId>
+            <artifactId>jboss-ejb3-ext-api</artifactId>
+            <version>2.2.0.Final</version>
+        </dependency>
 
     </dependencies>
 
@@ -214,7 +218,7 @@
                 <version>${version.war.plugin}</version>
                 <configuration>
                     <!-- Java EE 7 doesn't require web.xml, Maven needs to catch up! -->
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <failOnMissingWebXml>true</failOnMissingWebXml>
                 </configuration>
             </plugin>
             <!-- The WildFly plugin deploys your war to a local WildFly container -->
