--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.bootsfaces</groupId>
+            <artifactId>bootsfaces</artifactId>
+            <version>1.2.0</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
