--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 
-<security-constraint>
-    <web-resource-collection>
-        <web-resource-name>rest</web-resource-name>
-        <url-pattern>/rest/*</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>index</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>KEYCLOAK</auth-method>
+        <realm-name>jee-eshop</realm-name>
+    </login-config>
+
+    <security-role>
         <role-name>user</role-name>
-    </auth-constraint>
-</security-constraint>
+    </security-role>
 
-<security-role>
-    <role-name>user</role-name>
-</security-role>
-
-<context-param>
+    <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
     </context-param>
-    
+
     <!-- The BootsFaces_THEME context-param controls the loading of the Themes -->
     <!-- The default is Bootstrap, the valid values are a Bootswach Theme name (lowercase) or "custom".
          If custom is chosen, you will have to provide your custom CSS in the "other" folder. -->
@@ -37,7 +42,7 @@
         <param-name>net.bootsfaces.get_jquery_from_cdn</param-name>
         <param-value>false</param-value>
     </context-param>
-    
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -50,7 +55,7 @@
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
-    
+
     <session-config>
         <session-timeout>
             30
